@@ -5,7 +5,7 @@
 //
 // Scry is distributed under a BSD License.  See LICENSE for details.
 //
-// $Id: DESIGN,v 1.6 2004/09/30 01:33:50 jbyers Exp $
+// $Id: DESIGN,v 1.7 2004/09/30 20:51:23 jbyers Exp $
 //
 
 Structure
@@ -143,6 +143,14 @@ will pass image loads through readfile() in the image.php view.
 
 See README for instructions on how to set up images outside the
 docroot.
+
+
+Resizing
+------------------------------------------------------------------------------
+
+Scry attempts to intelligently resize images for thumbnails and
+viewing, based on the bounds set by $CFG_thumb_(width|height) and
+$CFG_view_(width|height).
 
 
 Templates
