@@ -6,22 +6,25 @@
 //
 // Scry is distributed under a BSD License.  See LICENSE for details.
 //
-// $Id: setup.php,v 1.8 2004/09/30 01:34:57 jbyers Exp $
+// $Id: setup.php,v 1.9 2004/09/30 20:51:23 jbyers Exp $
 //
  
 /***************************************************************************
  *                                                                         *
- * These five values must be set to install Scry.  See README for details. *
+ * The first five values must be set to install Scry.  See README.         *
  *                                                                         *
  ***************************************************************************/
 
-$CFG_url_scry    = 'http://CHANGE_ME/scry/';
-$CFG_url_images  = 'http://CHANGE_ME/photos/';
+$CFG_url_scry    = 'http://jbyers.com/scry/';
+$CFG_url_images  = 'http://jbyers.com/photos-nopub/';
 
-$CFG_path_scry   = '/CHANGE_ME/docroot/scry';
-$CFG_path_images = '/CHANGE_ME/docroot/photos';
+$CFG_path_scry   = '/var/www/jbyers.com/docroot/scry';
+$CFG_path_images = '/var/www/jbyers.com/docroot/photos-nopub';
 
-$CFG_template    = 'setup';
+$CFG_template    = 'debug';
+
+$CFG_album_title = 'photo album';
+$CFG_album_name  = 'photos';
 
 /***************************************************************************
  *                                                                         *
@@ -29,18 +32,9 @@ $CFG_template    = 'setup';
  *                                                                         *
  ***************************************************************************/
 
-//////////////////////////////////////////////////////////////////////////////
-// advanced configuration
-//
-
-// page titles
-//
-$CFG_album_name       = 'photo album';
-$CFG_album_name_short = 'photos';
-
-// URL variable mode; if in doubt, use get
-//   get for GET variables
-//   path for path parsing
+// URL variable mode, see DESIGN for details; if in doubt, use 'get'
+//   'get'  for GET variables
+//   'path' for path parsing
 //   
 $CFG_variable_mode = 'get';
 
@@ -56,14 +50,6 @@ $CFG_image_height  = 480;
 //
 $CFG_image_valid = array("jpg", "jpeg");
 
-// derived URLs and paths
-//
-$CFG_url_album     = rtrim($CFG_url_scry, '/')  . '/index.php';
-$CFG_path_cache    = rtrim($CFG_path_scry, '/') . '/cache';
-$CFG_path_template = rtrim($CFG_path_scry, '/') . '/templates/' . $CFG_template;
-$CFG_url_cache     = rtrim($CFG_url_scry, '/')  . '/cache';
-$CFG_url_template  = rtrim($CFG_url_scry, '/')  . '/templates/' . $CFG_template;
-
 // are the cache and images directories outside the webserver's docroot?
 //
 $CFG_cache_outside_docroot  = false;
@@ -71,12 +57,13 @@ $CFG_images_outside_docroot = false;
 
 // enable resized image cache in cache directory / directories
 //
-$CFG_cache_enable = true;
+$CFG_cache_enable = false;
 
-// set to true for "fast mode" image resizing
-// resized images will be of lower quality (ImageCopyResized vs. ImageCopyResampled)
+// CFG_resize_fast set to true will make photo resizing faster but lower quality
+// CFG_use_old_gd  will use GD 1.6 functions instead of 2.0 functions
 //
 $CFG_resize_fast     = false;
+$CFG_use_old_gd      = false;
 
 // if CFG_resize_external is set, scry will use this external command for image
 // resizing instead of internal GD, removing the GD dependency entirely
@@ -89,14 +76,21 @@ $CFG_resize_fast     = false;
 //   %SRC%           full source image path  /var/www/photos/album/image1.jpg
 //   %DEST%          full destination path   /var/www/scry/cache/800x600_album_image1.jpg
 //
-
-// ImageMagick example TODO
+// example: ImageMagick convert
 //
-//$CFG_resize_external = '/usr/bin/convert -resize $targetSize $sourceFile $targetFile';
+//$CFG_resize_external = '/usr/bin/convert -resize %WIDTH%x%HEIGHT% %SRC% %DEST%';
 
 // turn on for debugging output on the image view
 // note: when on, images will appear broken and output text
 //
 $CFG_debug_image = false;
+
+// derived URLs and paths
+//
+$CFG_url_album     = rtrim($CFG_url_scry, '/')  . '/index.php';
+$CFG_path_cache    = rtrim($CFG_path_scry, '/') . '/cache';
+$CFG_path_template = rtrim($CFG_path_scry, '/') . '/templates/' . $CFG_template;
+$CFG_url_cache     = rtrim($CFG_url_scry, '/')  . '/cache';
+$CFG_url_template  = rtrim($CFG_url_scry, '/')  . '/templates/' . $CFG_template;
 
 ?>
